--- a/code/final.qmd
+++ b/code/final.qmd
@@ -9,6 +9,8 @@ Github repo: https://github.com/kathrynk04/ENVS-193DS_spring-2025_final.git
 library(tidyverse)
 library(janitor)
 library(here)
+library(ggeffects)
+library(MuMIn)
 
 sst <- read_csv(
   here("data", "SST_update2023.csv"))
@@ -74,6 +76,8 @@ sst_clean <- sst |> # storing the data into a new cleaned data frame
   mutate(mean_monthly_sst = round(mean_monthly_sst, 1)) # Round result
 
 str(sst_clean)
+
+slice_sample(sst_clean, n = 5)
 ```
 
 # b. Visualize the data
@@ -86,22 +90,57 @@ ggplot(data = sst_clean,
            group = year)) +
   geom_point() +
   geom_line() +
-  scale_color_manual(values = c("2018" = "red", # assigning different colors to each year
-                                "2019" = "orange",
-                                "2020" = "yellow",
-                                "2021" = "green",
-                                "2022" = "blue",
-                                "2023" = "purple")) +
+  scale_color_manual(values = c("2018" = "cadetblue1", # assigning different colors to each year
+                                "2019" = "cadetblue3",
+                                "2020" = "cadetblue",
+                                "2021" = "cadetblue4",
+                                "2022" = "darkblue",
+                                "2023" = "black")) +
   labs(x = "Month", # labeling the x-axis as "Month"
        y = "Mean monthly sea surface temperature (°C)") +
   theme_bw() + # making the theme black and white
   theme(panel.grid = element_blank(),
-        legend.location = "plot")
+        legend.position = "inside", legend.position.inside =  c(.1, 0.75)) +
+  guides(color = guide_legend("Year"))
 ```
 ## Problem 3: Data analysis
 
 ```{r message=FALSE}
 nest_boxes <- read_csv(here("data", "occdist.csv"))
+```
+
+```{r}
+#| echo: false
+
+nest_boxes_clean <- nest_boxes |> 
+  clean_names() |> 
+  pivot_longer(cols = c(sp, cs, e, tm),
+               names_to = "species_code",
+               values_to = "presence"
+  ) |> 
+   mutate(species = case_match(species_code,
+                               "sp" ~ "Swift Parrot",
+                               "cs" ~ "Common Starling",
+                               "e"  ~ "Empty",
+                               "tm" ~ "Tree Martin"),
+          species = as_factor(species),
+          species = fct_relevel(species,
+                                "Empty",
+                                "Swift Parrot",
+                                "Common Starling",
+                                "Tree Martin")) |> 
+  mutate(edge_distance = as.numeric(edge_distance)) |> 
+  # making sure that water_treatment is a factor and ordering levels
+  mutate(season = as_factor(season),
+         season = fct_relevel(season,
+                                       "2016",
+                                       "2019")) |> 
+  # selecting columns
+  select(species, presence, edge_distance, season) |> 
+  group_by(species, season) |>  # or add edge_distance for finer resolution
+  summarise(count = sum(presence), .groups = "drop")
+
+str(nest_boxes_clean)
 ```
 
 
@@ -119,6 +158,38 @@ The seasons are the summer in 2016 and 2019, and the difference between these se
 
 # d. Table of models
 
+```{r message=FALSE}
+# Filter just Swift Parrot rows
+swift_data <- filter(nest_boxes_clean, species == "Swift Parrot")
+
+model1 <- lm(
+  count ~ 1,  # or add edge_distance if grouped that way
+  data = filter(nest_boxes_counts, species == "Swift Parrot")
+)
+
+names(model0) <- unique(nest_boxes_clean$species)
+
+# Model 1: all predictors
+model1 <- glm(
+  presence ~ edge_distance + season,
+  data = swift_data,
+  family = "binomial"
+)
+
+# Model 2: edge_distance only
+model2 <- glm(
+  presence ~ edge_distance,
+  data = swift_data,
+  family = "binomial"
+)
+
+# Model 3: season only
+model3 <- glm(
+  presence ~ season,
+  data = swift_data,
+  family = "binomial"
+)
+```
 
 
 ## Problem 4: Affective and exploratory eisualizations
